<resources>
    <string name="server_client_id">1008259459239-ic0lmsu9hhl6i929pav41u8smjbbc86s.apps.googleusercontent.com</string>
    <string name="app_client_id">1008259459239-hlmd8qnm626idv1b9b2p4bd8pfjdtndp.apps.googleusercontent.com</string>
    <string name="app_debug_client_id">1008259459239-hj2tlbdbvk3qo8ar56dqf24s3atck2br.apps.googleusercontent.com</string>

    <string name="app_name">IntelliQ</string>

    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas neque mauris, pharetra eu consectetur sit amet, pulvinar vel neque. Sed nec nisi eu quam sodales pharetra sit amet id velit. In hac habitasse platea dictumst. Sed congue turpis euismod, euismod purus eget, eleifend augue.</string>

    <string name="unit_meters">meters</string>
    <string name="unit_kilometer">kilometer</string>
    <string name="unit_kilometers">kilometers</string>
    <string name="unit_minute">minute</string>
    <string name="unit_minutes">minutes</string>
    <string name="unit_hour">hour</string>
    <string name="unit_hours">hours</string>

    <string name="distance_on_spot">You\'re here</string>
    <string name="distance_super_close">Should be in sight</string>
    <string name="distance_close">Just around the corner</string>
    <string name="distance_from_place">[VALUE] from your place</string>
    <string name="distance_beeline">[VALUE] beeline</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_group_account">Account</string>
    <string name="navigation_group_queues">Queues</string>
    <string name="navigation_group_communicate">Communicate</string>
    <string name="navigation_item_queues_nearby">Nearyby Queues</string>
    <string name="navigation_item_queues_search">Search for Queues</string>
    <string name="navigation_item_queues_create">Create a Queue</string>
    <string name="navigation_item_feedback">Send Feedback</string>
    <string name="navigation_item_share">Share App</string>

    <string name="navigation_signed_out_heading">No account connected</string>
    <string name="navigation_signed_out_subheading">Some queue operators will only assign tickets to signed in users to prevent misuse.</string>


    <!-- Actions -->
    <string name="action_ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="action_apply">Apply</string>
    <string name="action_retry">Retry</string>
    <string name="action_got_it">Got it</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_revoke_access">Revoke access</string>


    <string name="tab_queues_recent">Recent</string>
    <string name="tab_queues_nearby">Nearby</string>

    <string name="queue_action_directions">Get Directions</string>
    <string name="queue_action_view">View Queue</string>

    <string name="queue_estimation_people">people in queue</string>
    <string name="queue_estimation_time">minutes to wait</string>

    <string name="rationale_location_title">Location</string>
    <string name="rationale_location_message">We need access to your approximate location in order to find available queues in your area.\n\nPlease grant the permission and we\'ll start looking for nearby queues.</string>

    <string name="request_postal_code_title">Postal Code</string>
    <string name="request_postal_code_message">Because we don\'t have access to your location right now, please provide your current postal code instead.</string>

    <!-- Status -->
    <string name="status_loading">Loading</string>
    <string name="status_loading_queues_title">Looking for queues</string>
    <string name="status_loading_queues_message">Please hang on a few seconds, we are looking for matching queues.</string>
    <string name="status_error_unknown_title">Something went wrong</string>
    <string name="status_error_unknown_message">We\'re not quite sure what, though. Please let us know about this if restarting the app doesn\'t solve the issue.</string>
    <string name="status_error_sign_in_title">Sign in failed</string>
    <string name="status_error_sign_in_message">Authentication was not successful,</string>
    <string name="status_error_api_title">Server error</string>
    <string name="status_error_api_message">Unfortunately our servers couldn\'t handle this request. We\'ll do our best to fix this soon.</string>
    <string name="status_error_network_title">Network issues</string>
    <string name="status_error_network_message">We couldn\'t reach our servers, please make sure that you have a working internet connection.</string>
    <string name="status_error_no_data_title">No queues found</string>
    <string name="status_error_no_data_message">Unfortunately we couldn\'t find any queue nearby. Why don\'t you let some people know that they can create a queue for free?</string>
    <string name="status_error_unknown_location_title">Location unknown</string>
    <string name="status_error_unknown_location_message">We can\'t figure out your approximate location, please make sure that your device has a network or GPS connection. Open Maps to trigger a location update.</string>
    <string name="status_error_missing_location_permission_title">Location permission missing</string>
    <string name="status_error_missing_location_permission_message">@string/rationale_location_message</string>

    <string name="error_directions">Unable to provide directions</string>
    <string name="error_invalid_postal_code">Invalid postal code</string>

</resources>
