<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationItemAccount"
        android:visible="false"
        android:title="@string/navigation_group_account">
        <menu>
            <item android:id="@+id/navigationItemSignIn"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/action_sign_in" />

            <item android:id="@+id/navigationItemSignOut"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/action_sign_out" />

            <item android:id="@+id/navigationItemRevokeAccess"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/action_revoke_access" />

        </menu>
    </item>

    <group
        android:id="@+id/navigationGroupQueues"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_camara"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="Import" />
        <item android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item android:id="@+id/nav_manage"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item
        android:id="@+id/navigationItemCommunicate"
        android:title="@string/navigation_group_communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>